--- a/src/style.css
+++ b/src/style.css
@@ -1,8 +1,22 @@
-#app {
+html {
   font-family: Avenir, Helvetica, Arial, sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  text-align: center;
-  color: #2c3e50;
-  margin-top: 60px;
+  font-size: 18px;
 }
+
+body {
+  margin: 0;
+  padding: 1rem;
+  color: #061f38;
+}
+
+p {
+  margin: 0;
+  text-align: justify;
+}
+
+/* #app { */
+/* text-align: center;
+  margin-top: 60px;
+} */
